@@ -9,8 +9,10 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.IDN;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
-import oracle.jrockit.jfr.events.ContentTypeImpl;
 
 /**
  *
@@ -18,12 +20,21 @@ import oracle.jrockit.jfr.events.ContentTypeImpl;
  */
 public class HttpClient {
 
-    public static String Post(String url, String param) throws IOException {
-
-        HttpURLConnection conn = (HttpURLConnection) new URL(url).openConnection();
+    public static String Post(String url1, String param) throws IOException, URISyntaxException {
+        URL url = new URL(url1);
+        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+        URI uri = new URI(url.getProtocol(), url.getUserInfo(), IDN.toASCII(url.getHost()), url.getPort(), url.getPath(), url.getQuery(), url.getRef());
+        String correctEncodedURL = uri.toASCIIString();
+        System.out.println( "file>"+correctEncodedURL);
+        System.out.println("host>"+ url.getHost());
+        System.out.println("defaultPort>"+ url.getDefaultPort());
+        System.out.println( "ref>"+url.getRef());
+        System.out.println( "user info>"+url.getUserInfo());
+        System.out.println( "content>"+url.getContent());
+        System.out.println( "content>"+url.getQuery());
         conn.setRequestProperty("User-Agent", "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.87 Safari/537.36");
-       // conn.setDoOutput(true);
-       // conn.getOutputStream().write(param.getBytes());
+         conn.setDoOutput(true);
+         conn.getOutputStream().write(param.getBytes());
         BufferedReader reader = new BufferedReader(new InputStreamReader(conn.getInputStream()));
         String line = "";
         StringBuilder content = new StringBuilder();
@@ -35,6 +46,7 @@ public class HttpClient {
         return content.toString();
 
     }
+
     public static String get(String url) throws IOException {
 
         HttpURLConnection conn = (HttpURLConnection) new URL(url).openConnection();
@@ -50,8 +62,8 @@ public class HttpClient {
         return content.toString();
 
     }
-    
-    public static String getEmailRegEx(){
+
+    public static String getEmailRegEx() {
         return "(?:[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*|\"(?:[\\x01-\\x08\\x0b\\x0c\\x0e-\\x1f\\x21\\x23-\\x5b\\x5d-\\x7f]|\\\\[\\x01-\\x09\\x0b\\x0c\\x0e-\\x7f])*\")@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9-]*[a-z0-9]:(?:[\\x01-\\x08\\x0b\\x0c\\x0e-\\x1f\\x21-\\x5a\\x53-\\x7f]|\\\\[\\x01-\\x09\\x0b\\x0c\\x0e-\\x7f])+)\\])";
     }
 }
